chore : 피드백8 반영) ListStorage의 저장소를 구체 클래스가 아닌 인터페이스로 변경