@@ -3,18 +3,19 @@ package app.storage;
 import app.calculator.Answer;
 
 import java.util.LinkedList;
+import java.util.List;
 
 // LinkedList 타입의 저장소
 public class ListStorage implements Storage{
 
-    private static final LinkedList<String> storage = new LinkedList<>();
+    private static final List<String> storage = new LinkedList<>();
 
     // 저장소에 값을 저장합니다.
     @Override
     public String save(String expression, Answer answer) {
         storage.add(expression + " = " + answer.getCorrectAnswer());
 
-        return storage.getLast();
+        return storage.get(storage.size() - 1);
     }
 
     // 저장소의 모든 데이터를 String으로 반환합니다.
